production/gitlab-3rdparty/pgadmin.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: pgadmin
    run: pgadmin
  name: ui-pgadmin
spec:
  containers:
    - image: dpage/pgadmin4
      name: ui-pgadmin
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
