production/gitlab-3rdparty/ingressroute_tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gitlab.elizondo.cloud`)
    kind: Rule
    services:
    - name: nextcloud
      port: 8080
  tls:
    secretName: origin-cert
